# fiftyone

./: .coderabbit.yaml  .dockerignore  .editorconfig  .fiftyone-config  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  ANNOTATION_MODE_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  IMPLEMENTATION_SUMMARY.md  ISSUE_POLICY.md  ISSUE_TRIAGE.md  ISSUE_TRIAGE.rst  LICENSE  LICENSE-BRAIN  MANIFEST.in  Makefile  Makefile.teams  README.md  RELEASES.md  SECURITY.md  STYLE_GUIDE.md  TEAMS.md  TEST_RESULTS.md  WALKTHROUGH.md  codecov.yml  dbscript.py  dependencies.py  eval_detection_benchmark_script.py  evaluate_detections_benchmark.py  hatch.toml  install.bash  install.bat  (+21 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report_template.md  doc_fix_template.md  documentation_issue.yaml  documentation_issue_template.md  feature_request.yaml  feature_request_template.md  installation_issue.yaml  installation_issue_template.md
.github/disabled_workflows/: build-db.yml  build-docs.yml  build-graphql.yml
.github/tools/: check-setup-version.py
.github/workflows/: app.yml  build-and-publish-dev-artifacts.yml  build-app.yml  build-db.yml  build-desktop.yml  build-docker-images.yml  build-docker-internal.yml  build-docs.yml  build-fiftyone-package.yml  build-graphql.yml  build-gui.yml  build-publish-container.yml  build-teams-app-package.yml  build-teams-app.yml  build-teams-desktop-package.yml  build.yml  bump-package-versions.yml  bump-version.yml  chromatic.yml  community-base-policy.yml  community-prs.yml  community-to-develop.yml  daily-dev-deploy.yml  deploy-environment.yml  develop-back-merge.yml  e2e.yml  enterprise-sync.yml  lint-app.yml  lint.yml  merge-oss.yml  merge.yml  notify-security-prs.yml  pr-welcome-comment.yml  pr.yml  publish.yml  purge-artifacts.yml  push-release.yml  renovate.yml  sync-develop-to-community.yml  sync.yaml  (+8 more)
actions/manylinux/: action.yml  entrypoint.sh
app/: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .yarnrc.yml  CHANGES.md  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  dev.mjs  docs.json  docs.md  docs.rst  error-baseline.json  eslint-packages.txt  gen-docs.js  gen-docs.sh  main.ts  package.json  recharts-scale-patch.diff  relay.config.json  schema.graphql  snowpack.config.js  tsconfig.base.json  tsconfig.check.json  tsconfig.json  tsconfig.spec.json  tsconfig.typecheck.json  typedoc.js  vite.base.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
app/.storybook/: main.js  preview.js
app/__mocks__/: recoil-relay.ts  recoil.ts
app/client/: package.json  snowpack.config.js  tsconfig.json
app/configs/: webpack.config.base.js  webpack.config.eslint.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.prod.babel.js
app/looker/: package.json  snowpack.config.js  tsconfig.json
app/patches/: html2canvas+1.0.0-rc.7.patch  react-infinite-scroller+1.2.4.patch  recharts-scale+0.4.3.patch
app/player51/: .eslintignore  .eslintrc.js  README.md  package.json  snowpack.config.js  tsconfig.json
app/public/: index.html
app/scripts/: check-baselines.mjs  package-graph.mjs  typecheck-progress.mjs  typecheck-summary.mjs  typecheck.mjs
app/src/: Routes.tsx  app.global.css  app.html  icons.tsx  index.tsx  main.dev.ts  main.prod.js
app/test/: example.js
app/tests/: setup.ts
app/types/: mui-theme.d.ts
archive/: README.md
archive/cifar10_inference/: README.md
archive/mongodb/: README.md
benchmark/: evaluate_detections.py  evaluate_segmentations.py  export_segmentations.py
deployment/: cluster.yml
design/: arbitrary_collection_watcher.md
docker/: Dockerfile  README.md
docs/: .gitignore  Makefile  README.md  README.rst  cli_guide.md  conf.py  dev_guide.md  docs_guide.md  generate_docs.bash  hrm2_integration.md  index.rst  install_guide.md  overview.rst  preview_page.bash  process_css.py  substitutions.rst
e2e/: .env.cypress.example  .env.development  .gitignore  README.md  cypress.config.ts  cypress.d.ts  index.ts  package.json  tsconfig.json
e2e-pw/: .env.ci  .env.dev  .env.dev.template  .eslintrc.js  .gitignore  README.md  dev.launch.sh  dev.launch.sh.template  eslint.config.cjs  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
electron/: .eslintrc.js  .gitignore  CONTRIBUTING.md  README.md  package.json  storyshots.test.js  storyshots.test.ts  tsconfig.json
examples/: .gitignore  README.md  dataset_creation.md  datasets.py  download_data.py  evaluate_detections.md  examples.py  file_hash_end_to_end.py  hrm2_example.py  image_uniqueness.md  inference.py  interface.py  make_fh_e2e_dataset.py  pseudocode.md  sample_pseudocode.md  session_pseudocode.md  test_database_conn.py  test_server.py  tg_interface.py  walkthrough.md  walkthrough.py  wrangling_datasets.md
fiftyone/: __init__.py  __public__.py  _service_main.py  constants.py  fiftyone  interface.py  notebook.py
fiftyone_teams_api/: __init__.py  client.py  constants.py  errors.py  socket.py
open_images_error_analysis/: README.md  VIEWDATASET.md
package/: README.md  setup_utils.py
plugins/: __init__.py
requirements/: codecov.yml  common.txt  constraints.txt  dev.txt  docs-teams.txt  docs.txt  e2e.txt  extras.txt  github.txt  teams.txt  test.txt
scripts/: configure.sh  generate-ephemeral-env.sh  telepresence-wrapper.sh
teams-app/: .dockerignore  .gitignore  .npmrc  .yarnrc.yml  Dockerfile  package.json  vitest.config.ts
tests/: 51in15.py  README.md  conftest.py  db_conn_test.py  document_test.py  import_export_tests.py  interface_v2.py  ipc_tests.py  labels_test.py  odm_test.py  sample_and_dataset_test.py  server_tests.py  session_tests.py  stage_tests.py  test_6707_unit.py  unittests.py  view_test.py  zoo_test.py  zoo_tests.py
tgscripts/: coco_analysis.py  openimages_analysis.py
tools/: README.txt  kill.py  pgrep.py  subprocess_monitor.py
(+3043 files in other folders)
