[tool.poetry]
name = "fiftyone"
version = "0.23.0"
description = ""
authors = ["None"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.2.1"
argcomplete = "^3.1.6"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.29.3"
cachetools = "^5.3.2"
mongoengine = "0.24.2"
dacite = ">=1.6.0,<1.8.0"
deprecated = "^1.2.14"
ftfy = "^6.1.1"
humanize = "^4.8.0"
hypercorn = ">=0.13.2"
importlib-metadata = {markers = "python_version < \"3.8\"", version = "^6.8.0"}
jinja2 = ">=3"
kaleido = "!=0.2.1.post1"
matplotlib = "<=3.8.2"
motor = ">=2.5"
numpy = "<=1.26.2"
packaging = "^23.2"
pandas = "<=2.1.3"
pillow = ">=6.2"
plotly = ">=4.14"
pprintpp = "^0.4.0"
psutil = "^5.9.6"
pymongo = ">=3.12"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
regex = "^2023.10.3"
retrying = "^1.3.4"
scikit-learn = "^1.3.2"
scikit-image = "<=0.22.0"
setuptools = "^68.2.2"
sseclient-py = ">=1.7.2,<2"
sse-starlette = ">=0.10.3,<1"
starlette = ">=0.24.0"
strawberry-graphql = "0.138.1"
tabulate = "^0.9.0"
xmltodict = "^0.13.0"
universal-analytics-python3 = ">=1.0.1,<2"
fiftyone-brain = ">=0.13.2,<0.14.0"
fiftyone-db = ">=0.4,<1.0"
voxel51-eta = ">=0.12,<1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
