[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiftyone"
dynamic = ["version"]
description = "FiftyOne: the open-source tool for building high-quality datasets and computer vision models"
authors = [{ name = "Voxel51, Inc.", email = "info@voxel51.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  # third-party packages
  "aiofiles",
  "argcomplete",
  "beautifulsoup4",
  "boto3",
  "cachetools",
  "dacite>=1.6.0,<1.8.0",
  "Deprecated",
  "ftfy",
  "humanize",
  "hypercorn>=0.13.2",
  "Jinja2>=3",
  # kaleido indirectly required by plotly for image export
  # https://plotly.com/python/static-image-export/
  "kaleido!=0.2.1.post1",
  "matplotlib",
  "mongoengine==0.24.2",
  "motor>=2.5",
  "numpy",
  "packaging",
  "pandas",
  "Pillow>=6.2",
  "plotly>=4.14",
  "pprintpp",
  "psutil",
  "pymongo>=3.12",
  "pytz",
  "PyYAML",
  "regex",
  "retrying",
  "scikit-learn",
  "scikit-image",
  "setuptools",
  "sseclient-py>=1.7.2,<2",
  "sse-starlette>=0.10.3,<1",
  "starlette>=0.24.0",
  "strawberry-graphql==0.138.1",
  "tabulate",
  "xmltodict",
  "universal-analytics-python3>=1.0.1,<2",
  # internal packages
  "fiftyone-brain>=0.16.0,<0.17",
  "fiftyone-db>=0.4,<2.0",
  "voxel51-eta>=0.12.4,<0.13",
]

[project.optional-dependencies]
desktop = ["fiftyone-desktop~=0.33.2"]

[project.scripts]
fiftyone = "fiftyone.core.cli:main"

[project.urls]
documentation = "https://fiftyone.ai"
homepage = "https://github.com/voxel51/fiftyone"

# Development settings

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  | \.git
)/
'''
